Adding Meta Tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevShare - Showcase Your Coding Journey</title>
-    <meta name="description" content="Connect your X (Twitter), GitHub, and LeetCode accounts to automatically share your coding achievements with the world." />
+    
+    <!-- Primary Meta Tags -->
+    <title>DevShare - Auto-Tweet Your Dev Contributions</title>
+    <meta name="title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta name="description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://devshare.ayanmn18.live/">
+    <meta property="og:title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta property="og:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
+    <meta property="og:image" content="https://i.postimg.cc/ZRKdWWgt/DevShare-Metadata.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
+    <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
+    <meta property="twitter:image" content="https://i.postimg.cc/ZRKdWWgt/DevShare-Metadata.png">
+
+    <!-- Theme Color for browsers -->
+    <meta name="theme-color" content="#0f172a">
   </head>
   <body>
     <div id="root"></div>
