--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://devshare.ayanmn18.live/">
     <meta property="og:title" content="DevShare - Auto-Tweet Your Dev Contributions">
     <meta property="og:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
-    <meta property="og:image" content="https://i.postimg.cc/ZRKdWWgt/DevShare-Metadata.png">
+    <meta property="og:image" content="https://uiwkjvslz0.ufs.sh/f/7LCulCrlhcN5AXCRsreQjYzCMeO2nWbl98xy3fcdVkaHS1oD">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
     <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
     <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
-    <meta property="twitter:image" content="https://i.postimg.cc/ZRKdWWgt/DevShare-Metadata.png">
+    <meta property="twitter:image" content="https://uiwkjvslz0.ufs.sh/f/7LCulCrlhcN5AXCRsreQjYzCMeO2nWbl98xy3fcdVkaHS1oD">
 
     <!-- Theme Color for browsers -->
     <meta name="theme-color" content="#0f172a">
