twitter card OG

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
     <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
     <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
-    <meta property="twitter:image" content="https://uiwkjvslz0.ufs.sh/f/7LCulCrlhcN5AXCRsreQjYzCMeO2nWbl98xy3fcdVkaHS1oD">
+    <meta property="twitter:image" content="https://i.postimg.cc/mgmQ0RKH/Chat-SQL-Metadata.png">
 
     <!-- Theme Color for browsers -->
     <meta name="theme-color" content="#0f172a">
