--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!doctype html>
-<html lang="en" class="light">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>ChatSQL - Talk to Your Database Like a Human</title>
-    <meta name="title" content="ChatSQL - Talk to Your Database Like a Human">
-    <meta name="description" content="Transform your database interactions with natural language queries. Get insights faster, easier, and more intuitively than ever before.">
+    <title>DevShare - Auto-Tweet Your Dev Contributions</title>
+    <meta name="title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta name="description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chatsql.ayanmn18.live/">
-    <meta property="og:title" content="ChatSQL - Talk to Your Database Like a Human">
-    <meta property="og:description" content="Transform your database interactions with natural language queries. Get insights faster, easier, and more intuitively than ever before.">
-    <meta property="og:image" content="https://i.postimg.cc/mgmQ0RKH/Chat-SQL-Metadata.png">
+    <meta property="og:url" content="https://devshare.ayanmn18.live/">
+    <meta property="og:title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta property="og:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
+    <meta property="og:image" content="/meta-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://chatsql.ayanmn18.live/">
-    <meta property="twitter:title" content="ChatSQL - Talk to Your Database Like a Human">
-    <meta property="twitter:description" content="Transform your database interactions with natural language queries. Get insights faster, easier, and more intuitively than ever before.">
-    <meta property="twitter:image" content="https://i.postimg.cc/mgmQ0RKH/Chat-SQL-Metadata.png">
+    <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
+    <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
+    <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
+    <meta property="twitter:image" content="/meta-image.png">
 
     <!-- Theme Color for browsers -->
-    <meta name="theme-color" content="#2563EB">
+    <meta name="theme-color" content="#0f172a">
   </head>
   <body>
     <div id="root"></div>
