image fixes for meta tag in twitter

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Primary Meta Tags -->
     <title>DevShare - Auto-Tweet Your Dev Contributions</title>
     <meta name="title" content="DevShare - Auto-Tweet Your Dev Contributions">
@@ -22,7 +22,8 @@
     <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
     <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
     <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
-    <meta property="twitter:image" content="/meta-image.png">
+    <meta property="og:image" content="https://devshare.ayanmn18.live/meta-image.png">
+    <meta property="twitter:image" content="https://devshare.ayanmn18.live/meta-image.png">
 
     <!-- Theme Color for browsers -->
     <meta name="theme-color" content="#0f172a">
