--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta property="twitter:url" content="https://devshare.ayanmn18.live/">
     <meta property="twitter:title" content="DevShare - Auto-Tweet Your Dev Contributions">
     <meta property="twitter:description" content="Connect GitHub, LeetCode, and X to automatically schedule and share your daily coding contributions with the world. Designed for developers.">
-    <meta property="og:image" content="https://devshare.ayanmn18.live/meta-image.png">
-    <meta property="twitter:image" content="https://devshare.ayanmn18.live/meta-image.png">
+    <meta property="og:image" content="https://devshare.ayanmn18.live/meta-image.jpeg">
+    <meta property="twitter:image" content="https://devshare.ayanmn18.live/meta-image.jpeg">
 
     <!-- Theme Color for browsers -->
     <meta name="theme-color" content="#0f172a">
